Fix spacing to right of sidebar.
When increasing the padding-left on .left-sidebar-slab-container,
we noticed an issue where the heading contents (i.e. Atoms,
Molecules) were overflowing their 1/4 grid column. To avoid this issue,
we changed the sidebar collapse threshold to be the $tablet-up width
PLUS the sidebar width. The grid collapses to mobile behavior at
$tablet-up width, so this ensures that the main content area doesn't
become narrower than $tablet-up before the grid changes into mobile mode.

Also includes css cleanup:
- Rename variable $sidebar-width to use dash instead of underscore
- Rename class toolbar-alt to toolbar--with-sidebar
- Remove obsolete coments
- Use variables instead of hard-coded pixel values

--- a/app/assets/stylesheets/_sidebar-nav.scss
+++ b/app/assets/stylesheets/_sidebar-nav.scss
@@ -1,10 +1,7 @@
-$sidebar_width: $s250;
+$sidebar-width: $s250;
 
-/* -------------
-Color Class Updates
-----------------*/
-.toolbar_alt{
-  max-width: 960px;
+.toolbar--with-sidebar{
+  max-width: $site-max-up;
   display: flex;
   justify-content: space-between;
   margin: auto;
@@ -12,7 +9,7 @@ Color Class Updates
   clear: both;
 }
 
-.toolbar_alt.clearfix:after {
+.toolbar--with-sidebar.clearfix:after {
   content: "";
   visibility: hidden;
   display: block;
@@ -20,7 +17,7 @@ Color Class Updates
   clear: both;
 }
 
-.toolbar_alt > .main-header__title{
+.toolbar--with-sidebar > .main-header__title{
   float: left;
   margin-top: $s15;
   margin-left: $s15;
@@ -55,7 +52,7 @@ Sidebar Nav
 ----------------*/
 .sidebar-nav {
   position: fixed;
-  width: $sidebar_width;
+  width: $sidebar-width;
   height: 100%;
   padding-bottom: 6em;
   z-index: 9;
@@ -120,11 +117,13 @@ Sidebar Nav
 Sidebar Nav
 ----------------*/
 .left-sidebar-slab-container{
-  margin-left: 11em;
-  padding-left: 1em;
+  margin-left: $sidebar-width - $page-padding;
+  padding-left: $s35;
 }
 
-@media screen and (max-width: $tablet-up - 1) {
+$sidebar-width-px: 250px;
+
+@media screen and (max-width: $tablet-up + $sidebar-width-px - 1) {
   .sidebar{
     display: none;
   }
@@ -156,7 +155,7 @@ Sidebar Nav
   }
 }
 
-@media screen and (min-width: $tablet-up) {
+@media screen and (min-width: $tablet-up + $sidebar-width-px) {
   .sidebar{
     display: inline-block;
   }
@@ -165,16 +164,11 @@ Sidebar Nav
     display: none;
   }
 
-  .left-sidebar-slab-container{
-    margin-left: 11em;
-    padding-left: 1em;
-  }
-
   .sidebar-nav {
-    width: $sidebar_width !important;
+    width: $sidebar-width !important;
   }
 
   .main-footer {
-    left: $sidebar_width;
+    left: $sidebar-width;
   }
 }
